# solana-test

./: Cargo.toml
anchor/: Cargo.toml
anchor/src/: processor.rs
anchor/tests/tests/: deposit.rs
bar/: Cargo.toml
bar/src/: lib.rs  processor.rs
foo/: Cargo.toml
foo/src/: instruction.rs  lib.rs  processor.rs
foo/tests/: mod.rs
foo/tests/tests/: deposit.rs  mod.rs  test_foo.rs
lido/: Cargo.toml
lido/src/: entrypoint.rs  processor.rs
testlib/: Cargo.toml
testlib/src/: anchor_integration.rs  bar_ctx.rs  foo_ctx.rs  lib.rs  proj1.rs  solido_context.rs
