[package]
name = "bar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.8"
foo = {path = "../foo", features = ["no-entrypoint"]} # Comment this line


[dev-dependencies]
testlib = { path = "../testlib"}
solana-program-test = "1.7.8"

[lib]
crate-type = ["cdylib", "lib"]