[package]
license = "GPL-3.0"
edition = "2018"
name = "foo"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.8"

[dev-dependencies]
testlib = { path = "../testlib"}
solana-program-test = "1.7.8"

[lib]
crate-type = ["cdylib", "lib"]
